# FocusFlow

./: .env.example  .gitignore  AGENTS.md  Caddyfile  README.md  backup.sh  docker-compose.yml
.github/workflows/: build-backend.yml  build-frontend.yml  deploy.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260501_279450ea3630_add_user_model.py
backend/src/: main.py
backend/src/api/endpoints/: auth.py  health.py
backend/src/core/: auth.py  config.py  jwt.py  scheduler.py  utils.py
backend/src/db/: init_db.py  session.py
backend/src/models/: __init__.py  base.py  user.py
backend/src/schemas/: auth.py
backend/src/tasks/: sample_task.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: layout.js  page.js
frontend/app/workspace/: page.js
frontend/components/: LoginForm.js
frontend/lib/: api.js  md5.js  sha256.js
frontend/public/: .gitkeep  robots.txt  sitemap.xml
