[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "focusflow-backend"
version = "0.1.0"
description = "FocusFlow API - personal productivity assistant"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # Database & ORM
    "sqlmodel>=0.0.21",          # SQLAlchemy 2.0 + Pydantic v2
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",           # Async PostgreSQL driver
    "psycopg2-binary>=2.9.9",    # For Alembic migrations (sync)
    
    # Settings & Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # Scheduler
    "apscheduler>=3.10.4",
    
    # S3 Storage
    "boto3>=1.35.0",
    
    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",         # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",             # For API testing
    "ruff>=0.7.0",               # Linter
    "pyright>=1.1.380",          # Type checker
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "W", "UP", "PYI"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnknownMemberType = false  # Relax for faster AI prototyping
reportUnknownVariableType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
